[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader_api = "0.11.4"
noto-sans-mono-bitmap = "0.2.0"
# once_cell = { version = "1.18.0", default-features = false, features = ["critical-section"]}
# critical-section = "1.1.2"
# lazy_static = { version = "1.4.0", features = ["spin_no_std"]}
spin = { version = "0.9.8", features = ["lazy"] }


# alloc = ""
# [build-dependencies]
# bootloader = "0.11.4"
